# Model_states_environment

./: CMakeLists.txt  README.md  package.xml
changes for apriltag_ros package/: continuous_detection.launch  single_image_client.launch  single_image_server.launch
config/: basler_23750991.yaml  basler_23750991.yml  basler_23764941.yaml  pylon.yaml
config/apriltag/: settings.yaml  tags.yaml
launch/: model_states_environment.launch  pylon_and_apriltag.launch  pylon_camera_node.launch  rosbag_video.launch  spawn.launch  wamv_spawn.launch
models/camera/: model.config  model.sdf
models/sphere/: model.config  model.sdf
models/wamv/: model.config  model.sdf  robot.gazebo.xacro
models/wamv/meshes/: WAM-V-Base.dae
models/wamv_3_tags/: model.config  model.sdf
models/wamv_3_tags/meshes/: wam-v-base_3tags.stl  wam-v-base_3tags_visual.mtl
start/: .tmuxinator.yml  control_exp.yml  flight_test.sh  flight_test.yml  session.yml  start_control_exp.sh  uav1_pos.yaml
start/apriltag/: settings.yaml  tags.yaml
start/custom_configs/: constraint_manager.yaml  uav_manager.yaml
urdf/: robot.gazebo.xacro  robot.urdf.xacro
worlds/: usv_wave_moving.world
